--- a/Configs/Savee.yaml
+++ b/Configs/Savee.yaml
@@ -1,45 +1,120 @@
-seed: 2021
-pretrained: False
-mode: AV
+# AV
+# mode: train
+# seed: 2022
+# pretrained: False # whether the model is pretrained. If true, then we will continue training of a pretrained model
+# # cross validation parameters
+# K_Fold: 5
+# cross_validation: True
+# Emotion_Recognition_Mode: AV
+# # dataset parameters
+# dataset: Savee
+# Zip_file_path: ./Dataset/Savee.zip  # file path
+# class_labels: ['neutral', 'happy', 'sad','angry','fearful', 'disgust','surprised']
+# video_features: ["AU01_r" ,"AU02_r" ,"AU04_r" , "AU05_r","AU06_r", "AU07_r", "AU09_r", "AU10_r","AU12_r","AU14_r","AU15_r", "AU17_r", "AU20_r", "AU23_r", "AU25_r", "AU26_r", "AU45_r", "AU01_c", "AU02_c", "AU04_c" ,"AU05_c", "AU06_c", "AU07_c", "AU09_c", "AU10_c", "AU12_c", "AU14_c", "AU15_c", "AU17_c", "AU20_c", "AU23_c", "AU25_c", "AU26_c", "AU28_c", "AU45_c"]
+
+# # feature parameters
+# sample_rate: 48000
+# feature_folder: features
+
+# # checkpoints & log files
+# dataset_path: Output/Savee_AV/  # checkpoint file path
+# confusion_matrix_path: Savee_AV_confusion_1
+# loss_plot_path: Savee_AV_loss_1
+# checkpoint_name: Savee_AV_IS_1 # checkpoint file name
+# acc_plot_path: Savee_AV_acc_1 # accuracy plot file name
+
+# # training parameters
+# # feature_exist: True
+# data_size: None
+# epochs: 50
+# batch_size: 32
+# lr: 0.00005
+# weight_decay: 0.00001
+
+
+# # Model parameters
+# dim_feedforward: 256
+# dropout: 0
+# num_layers: 2
+
+# 96.67%
+
+# VO
+# mode: train
+# seed: 2022
+# pretrained: False # whether the model is pretrained. If true, then we will continue training of a pretrained model
+# # cross validation parameters
+# K_Fold: 5
+# cross_validation: True
+# Emotion_Recognition_Mode: VO
+# # dataset parameters
+# dataset: Savee
+# Zip_file_path: ./Dataset/Savee.zip  # file path
+# class_labels: ['neutral', 'happy', 'sad','angry','fearful', 'disgust','surprised']
+# video_features: ["AU01_r" ,"AU02_r" ,"AU04_r" , "AU05_r","AU06_r", "AU07_r", "AU09_r", "AU10_r","AU12_r","AU14_r","AU15_r", "AU17_r", "AU20_r", "AU23_r", "AU25_r", "AU26_r", "AU45_r", "AU01_c", "AU02_c", "AU04_c" ,"AU05_c", "AU06_c", "AU07_c", "AU09_c", "AU10_c", "AU12_c", "AU14_c", "AU15_c", "AU17_c", "AU20_c", "AU23_c", "AU25_c", "AU26_c", "AU28_c", "AU45_c"]
+
+# # feature parameters
+# sample_rate: 48000
+# feature_folder: features
+
+# # checkpoints & log files
+# dataset_path: Output/Savee_VO/  # checkpoint file path
+# confusion_matrix_path: Savee_VO_confusion_1
+# loss_plot_path: Savee_VO_loss_1
+# checkpoint_name: Savee_VO_IS_1 # checkpoint file name
+# acc_plot_path: Savee_VO_acc_1 # accuracy plot file name
+
+# # training parameters
+# # feature_exist: True
+# data_size: None
+# epochs: 50
+# batch_size: 32
+# lr: 0.00005
+# weight_decay: 0.00001
+
+# # Model parameters
+# dim_feedforward: 256
+# dropout: 0
+# num_layers: 2
+
+# 1. 95.21
+
+# AO
+mode: train
+seed: 2022
+pretrained: False # whether the model is pretrained. If true, then we will continue training of a pretrained model
+# cross validation parameters
+K_Fold: 5
+cross_validation: True
+Emotion_Recognition_Mode: AO
 # dataset parameters
 dataset: Savee
 Zip_file_path: ./Dataset/Savee.zip  # file path
-class_labels: ['neutral', 'happy', 'sad','angry','fearful', 'disgust']
+class_labels: ['neutral', 'happy', 'sad','angry','fearful', 'disgust','surprised']
 video_features: ["AU01_r" ,"AU02_r" ,"AU04_r" , "AU05_r","AU06_r", "AU07_r", "AU09_r", "AU10_r","AU12_r","AU14_r","AU15_r", "AU17_r", "AU20_r", "AU23_r", "AU25_r", "AU26_r", "AU45_r", "AU01_c", "AU02_c", "AU04_c" ,"AU05_c", "AU06_c", "AU07_c", "AU09_c", "AU10_c", "AU12_c", "AU14_c", "AU15_c", "AU17_c", "AU20_c", "AU23_c", "AU25_c", "AU26_c", "AU28_c", "AU45_c"]
 
 # feature parameters
 sample_rate: 48000
-feature_folder: features/Savee/
+feature_folder: features
 
 # checkpoints & log files
-dataset_path: Output/Savee/  # checkpoint file path
-checkpoint_name: Savee_AV_IS2 # checkpoint file name
-
-loss_plot_path: Savee_AV_loss2
-acc_plot_path: Savee_AV_acc2 # accuracy plot file name
-confusion_matrix_path: Savee_AV_confusion2
+dataset_path: Output/Savee_AO/  # checkpoint file path
+confusion_matrix_path: Savee_AO_confusion_1
+loss_plot_path: Savee_AO_loss_1
+checkpoint_name: Savee_AO_IS_1 # checkpoint file name
+acc_plot_path: Savee_AO_acc_1 # accuracy plot file name
 
 # training parameters
-feature_exist: True
+# feature_exist: True
 data_size: None
-train_ratio: 0.8
-val_ratio: 0
-test_ratio: 0.2
 epochs: 50
 batch_size: 32
-lr: 0.0001
-weight_decay: 0.0001
+lr: 0.00005
+weight_decay: 0.00001
 
 
 # Model parameters
-dim_feedforward: 512
-dropout: 0
-
-# AV:
-# Trans only on videos and audios + extracted features
-# 1.Trans 5 layer for both audio and video 0.0001, 0.0001, 512, 0.1, acc = 94.05
-# 2.Trans 5 layer for both audio and video 0.0001, 0.0001, 512, 0.1, acc =
-
-# VO:
-# Trans only on videos
-# 0.0001, 0.0001, 512, 0.1, acc = 88
+dim_feedforward: 1024
+dropout: 0.1
+num_layers: 4
+# 81.67
